--- a/templates/dashboards/sales/sell.html
+++ b/templates/dashboards/sales/sell.html
@@ -1634,7 +1634,7 @@
                                 class="bi bi-speedometer2 me-2"></i>Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/sales/sell"><i class="bi bi-graph-up me-2"></i>Sell</a>
+                        <a class="nav-link active" href="/sales/sell"><i class="bi bi-graph-up me-2"></i>Selling</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/sales/ready-to-go-orders"><i
@@ -3667,6 +3667,7 @@
                 const responseContent = document.getElementById('printResponseContent');
                 const modalFooter = document.getElementById('printPopupFooter');
                 const popupCloseBtn = document.getElementById('popupCloseBtn');
+                const printPopupModalLabel = document.getElementById('printPopupModalLabel');
 
                 // Reset modal states before showing
                 loadingDots.style.display = 'flex';
@@ -3680,6 +3681,7 @@
                     keyboard: false
                 });
                 popupCloseBtn.disabled = true;
+                printPopupModalLabel.textContent = 'Processing Order...';
                 printModal.show();
 
                 // Step 1: Save invoice to database
@@ -3697,6 +3699,7 @@
                         if (data.success && data.invoice_number) {
 
                             document.getElementById('popupCloseBtnRelode').value = "true"; // Explicitly as a string
+                            printPopupModalLabel.textContent = 'Invoice Generated Successfully';
                             // Show success message and share button
                             setTimeout(() => {
 
@@ -3722,6 +3725,7 @@
                             }, 1000); // Optional delay for smooth transition
 
                         } else {
+                            printPopupModalLabel.textContent = 'Failed To Generate Invoice';
                             popupCloseBtn.disabled = false;
                             // throw new Error(data.error || 'Failed to save invoice');
                             loadingDots.style.display = 'none';
@@ -3734,6 +3738,7 @@
                         }
                     })
                     .catch(error => {
+                        printPopupModalLabel.textContent = 'Failed To Generate Invoice';
                         popupCloseBtn.disabled = false;
                         console.error('Error:', error);
                         loadingDots.style.display = 'none';
