--- a/templates/dashboards/admin/customers.html
+++ b/templates/dashboards/admin/customers.html
@@ -940,9 +940,10 @@
                         </div>
                     </form>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="saveUser">Save</button>
+                <div class="modal-footer" style="display: flex; justify-content: space-between;">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                        style="width: 40%;">Cancel</button>
+                    <button type="submit" class="btn btn-primary" id="saveUser" style="width: 54%;">Save</button>
                 </div>
             </div>
         </div>
@@ -982,9 +983,10 @@
 
                     </form>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="updateUser">Update</button>
+                <div class="modal-footer" style="display: flex; justify-content: space-between;">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                        style="width: 40%;">Cancel</button>
+                    <button type="submit" class="btn btn-primary" id="updateUser" style="width: 54%;">Update</button>
                 </div>
             </div>
         </div>
@@ -1083,7 +1085,7 @@
             });
 
 
-            // Save new user
+            // Save new customer
             $('#saveUser').click(function () {
 
                 document.getElementById("loader-msg").textContent = "Saving...";
@@ -1102,17 +1104,39 @@
                     method: 'POST',
                     contentType: 'application/json',
                     data: JSON.stringify(formData),
+
                     success: function (response) {
+
                         if (response.success) {
+
                             $('#addUserModal').modal('hide');
                             $('#addUserForm')[0].reset();
-                            usersTable.ajax.reload();
+
+                            // Wait for DataTable reload to complete
+                            usersTable.ajax.reload(function () {
+
+                                document.getElementById("loader").classList.add("hidden");
+                                alert(response.message);
+
+                            }, false); // false keeps current page
+
+                        } else {
+
+                            document.getElementById("loader").classList.add("hidden");
+                            alert(response.message);
+
                         }
+
+                    },
+
+                    error: function () {
                         document.getElementById("loader").classList.add("hidden");
-                        alert(response.message);
+                        alert("Something went wrong.");
                     }
+
                 });
             });
+
 
             // Edit user
             $(document).on('click', '.edit-user', function () {
@@ -1133,7 +1157,7 @@
 
             });
 
-            // Update user
+            // Update customer
             $('#updateUser').click(function () {
 
                 document.getElementById("loader-msg").textContent = "Updating...";
@@ -1153,36 +1177,82 @@
                     method: 'PUT',
                     contentType: 'application/json',
                     data: JSON.stringify(formData),
+
                     success: function (response) {
+
                         if (response.success) {
+
                             $('#editUserModal').modal('hide');
-                            usersTable.ajax.reload();
+
+                            // Wait for table reload to complete
+                            usersTable.ajax.reload(function () {
+
+                                document.getElementById("loader").classList.add("hidden");
+                                alert(response.message);
+
+                            }, false); // false keeps current page
+
+                        } else {
+
+                            document.getElementById("loader").classList.add("hidden");
+                            alert(response.message);
+
                         }
+                    },
+
+                    error: function () {
                         document.getElementById("loader").classList.add("hidden");
-                        alert(response.message);
+                        alert("Something went wrong.");
                     }
                 });
             });
 
-            // Delete user
+
+            // Delete customer
             $(document).on('click', '.delete-user', function () {
+
                 if (confirm('Are you sure you want to delete this customer?')) {
+
                     document.getElementById("loader-msg").textContent = "Deleting...";
                     document.getElementById("loader").classList.remove("hidden");
+
                     const userId = $(this).data('id');
+
                     $.ajax({
                         url: `/admin/customers/${userId}/delete`,
                         method: 'DELETE',
+
                         success: function (response) {
+
                             if (response.success) {
-                                usersTable.ajax.reload();
+
+                                usersTable.ajax.reload(function () {
+
+                                    document.getElementById("loader").classList.add("hidden");
+                                    alert(response.message);
+
+                                }, false); // false keeps current pagination
+
+                            } else {
+
+                                document.getElementById("loader").classList.add("hidden");
+                                alert(response.message);
+
                             }
+
+                        },
+
+                        error: function () {
                             document.getElementById("loader").classList.add("hidden");
-                            alert(response.message);
+                            alert("Something went wrong.");
                         }
+
                     });
+
                 }
+
             });
+
         });
 
         // Sidebar/Topbar toggle logic (no changes to existing JS logic)
