--- a/templates/dashboards/admin/transport.html
+++ b/templates/dashboards/admin/transport.html
@@ -940,9 +940,9 @@
                         </div>
                     </form>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="saveUser">Save</button>
+                <div class="modal-footer" style="display: flex; justify-content: space-between;">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" style="width: 40%;">Cancel</button>
+                    <button type="submit" class="btn btn-primary" id="saveUser" style="width: 54%;">Save</button>
                 </div>
             </div>
         </div>
@@ -981,9 +981,10 @@
                         </div>
                     </form>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="updateUser">Update</button>
+                <div class="modal-footer" style="display: flex; justify-content: space-between;">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                        style="width: 40%;">Cancel</button>
+                    <button type="submit" class="btn btn-primary" id="updateUser" style="width: 54%;">Update</button>
                 </div>
             </div>
         </div>
@@ -1094,10 +1095,12 @@
             });
 
 
-            // Save new user
+            // Save new transport
             $('#saveUser').click(function () {
+
                 document.getElementById("loader-msg").textContent = "Saving...";
                 document.getElementById("loader").classList.remove("hidden");
+
                 const formData = {
                     name: $('input[name="name"]').val(),
                     pincode: $('input[name="pincode"]').val(),
@@ -1111,17 +1114,40 @@
                     method: 'POST',
                     contentType: 'application/json',
                     data: JSON.stringify(formData),
+
                     success: function (response) {
+
                         if (response.success) {
+
                             $('#addUserModal').modal('hide');
                             $('#addUserForm')[0].reset();
-                            usersTable.ajax.reload();
+
+                            // Wait for DataTable reload to finish
+                            usersTable.ajax.reload(function () {
+
+                                document.getElementById("loader").classList.add("hidden");
+                                alert(response.message);
+
+                            }, false); // false keeps current page
+
+                        } else {
+
+                            document.getElementById("loader").classList.add("hidden");
+                            alert(response.message);
+
                         }
+
+                    },
+
+                    error: function () {
                         document.getElementById("loader").classList.add("hidden");
-                        alert(response.message);
+                        alert("Something went wrong.");
                     }
+
                 });
+
             });
+
 
             // Edit user
             $(document).on('click', '.edit-user', function () {
@@ -1142,10 +1168,12 @@
 
             });
 
-            // Update user
+            // Update transport
             $('#updateUser').click(function () {
+
                 document.getElementById("loader-msg").textContent = "Updating...";
                 document.getElementById("loader").classList.remove("hidden");
+
                 const userId = $('#editUserForm input[name="id"]').val();
                 const formData = {
                     name: $('#editUserForm input[name="name"]').val(),
@@ -1160,55 +1188,131 @@
                     method: 'PUT',
                     contentType: 'application/json',
                     data: JSON.stringify(formData),
+
                     success: function (response) {
+
                         if (response.success) {
+
                             $('#editUserModal').modal('hide');
-                            usersTable.ajax.reload();
+
+                            // Wait for DataTable reload to finish
+                            usersTable.ajax.reload(function () {
+
+                                document.getElementById("loader").classList.add("hidden");
+                                alert(response.message);
+
+                            }, false); // keep current page
+
+                        } else {
+
+                            document.getElementById("loader").classList.add("hidden");
+                            alert(response.message);
+
                         }
+
+                    },
+
+                    error: function () {
                         document.getElementById("loader").classList.add("hidden");
-                        alert(response.message);
+                        alert("Something went wrong.");
                     }
+
                 });
+
             });
 
-            // Delete user
+
+            // Delete transport
             $(document).on('click', '.delete-user', function () {
+
                 if (confirm('Are you sure you want to delete this transport?')) {
+
                     document.getElementById("loader-msg").textContent = "Deleting...";
                     document.getElementById("loader").classList.remove("hidden");
+
                     const userId = $(this).data('id');
+
                     $.ajax({
                         url: `/admin/transport/${userId}/delete`,
                         method: 'DELETE',
+
                         success: function (response) {
+
                             if (response.success) {
-                                usersTable.ajax.reload();
+
+                                usersTable.ajax.reload(function () {
+
+                                    document.getElementById("loader").classList.add("hidden");
+                                    alert(response.message);
+
+                                }, false); // false keeps current page
+
+                            } else {
+
+                                document.getElementById("loader").classList.add("hidden");
+                                alert(response.message);
+
                             }
+
+                        },
+
+                        error: function () {
                             document.getElementById("loader").classList.add("hidden");
-                            alert(response.message);
+                            alert("Something went wrong.");
                         }
+
                     });
+
                 }
+
             });
 
+
+            // Restore transport
             $(document).on('click', '.restore-user', function () {
+
                 if (confirm('Are you sure you want to restore this user?')) {
+
                     document.getElementById("loader-msg").textContent = "Restoring...";
                     document.getElementById("loader").classList.remove("hidden");
+
                     const userId = $(this).data('id');
+
                     $.ajax({
                         url: `/admin/transport/${userId}/restore`,
                         method: 'PUT',
+
                         success: function (response) {
+
                             if (response.success) {
-                                usersTable.ajax.reload();
+
+                                usersTable.ajax.reload(function () {
+
+                                    document.getElementById("loader").classList.add("hidden");
+                                    alert(response.message);
+
+                                }, false); // keep current page
+
+                            } else {
+
+                                document.getElementById("loader").classList.add("hidden");
+                                alert(response.message);
+
                             }
+
+                        },
+
+                        error: function () {
                             document.getElementById("loader").classList.add("hidden");
-                            alert(response.message);
+                            alert("Something went wrong.");
                         }
+
                     });
+
                 }
+
             });
+
 
         });
 
