--- a/templates/dashboards/manager/customers.html
+++ b/templates/dashboards/manager/customers.html
@@ -959,9 +959,9 @@
 
                     </form>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="saveUser">Save</button>
+                <div class="modal-footer" style="display: flex; justify-content: space-between;">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" style="width: 40%;">Cancel</button>
+                    <button type="submit" class="btn btn-primary" id="saveUser" style="width: 54%;">Save</button>
                 </div>
             </div>
         </div>
@@ -1001,9 +1001,10 @@
 
                     </form>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="updateUser">Update</button>
+                <div class="modal-footer" style="display: flex; justify-content: space-between;">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                        style="width: 40%;">Cancel</button>
+                    <button type="submit" class="btn btn-primary" id="updateUser" style="width: 54%;">Update</button>
                 </div>
             </div>
         </div>
@@ -1102,7 +1103,7 @@
             });
 
 
-            // Save new user
+            // Save new customer
             $('#saveUser').click(function () {
 
                 document.getElementById("loader-msg").textContent = "Saving...";
@@ -1123,14 +1124,30 @@
                     method: 'POST',
                     contentType: 'application/json',
                     data: JSON.stringify(formData),
+
                     success: function (response) {
+
                         if (response.success) {
+
                             $('#addUserModal').modal('hide');
                             $('#addUserForm')[0].reset();
-                            usersTable.ajax.reload();
+
+                            // Wait until DataTable finishes reloading
+                            usersTable.ajax.reload(function () {
+
+                                document.getElementById("loader").classList.add("hidden");
+                                alert(response.message);
+
+                            }, false); // keep current page
+                        } else {
+                            document.getElementById("loader").classList.add("hidden");
+                            alert(response.message);
                         }
+                    },
+
+                    error: function () {
                         document.getElementById("loader").classList.add("hidden");
-                        alert(response.message);
+                        alert("Something went wrong.");
                     }
                 });
             });
@@ -1154,13 +1171,14 @@
 
             });
 
-            // Update user
+            // Update customer
             $('#updateUser').click(function () {
 
                 document.getElementById("loader-msg").textContent = "Updating customer...";
                 document.getElementById("loader").classList.remove("hidden");
 
                 const userId = $('#editUserForm input[name="id"]').val();
+
                 const formData = {
                     name: $('#editUserForm input[name="name"]').val(),
                     address: $('#editUserForm input[name="address"]').val(),
@@ -1174,38 +1192,80 @@
                     method: 'PUT',
                     contentType: 'application/json',
                     data: JSON.stringify(formData),
+
                     success: function (response) {
+
                         if (response.success) {
+
                             $('#editUserModal').modal('hide');
-                            usersTable.ajax.reload();
+
+                            // Wait for table reload to complete
+                            usersTable.ajax.reload(function () {
+
+                                document.getElementById("loader").classList.add("hidden");
+                                alert(response.message);
+
+                            }, false);
+
+                        } else {
+
+                            document.getElementById("loader").classList.add("hidden");
+                            alert(response.message);
+
                         }
+                    },
+
+                    error: function () {
                         document.getElementById("loader").classList.add("hidden");
-                        alert(response.message);
+                        alert("Something went wrong.");
                     }
                 });
             });
 
-            // Delete user
+
+            // Delete customer
             $(document).on('click', '.delete-user', function () {
+
                 if (confirm('Are you sure you want to delete this customer?')) {
 
                     document.getElementById("loader-msg").textContent = "Deleting customer...";
                     document.getElementById("loader").classList.remove("hidden");
 
                     const userId = $(this).data('id');
+
                     $.ajax({
                         url: `/manager/customers/${userId}/delete`,
                         method: 'DELETE',
+
                         success: function (response) {
+
                             if (response.success) {
-                                usersTable.ajax.reload();
+
+                                usersTable.ajax.reload(function () {
+
+                                    document.getElementById("loader").classList.add("hidden");
+                                    alert(response.message);
+
+                                }, false); // keep current page
+
+                            } else {
+
+                                document.getElementById("loader").classList.add("hidden");
+                                alert(response.message);
+
                             }
+                        },
+
+                        error: function () {
                             document.getElementById("loader").classList.add("hidden");
-                            alert(response.message);
+                            alert("Something went wrong.");
                         }
                     });
                 }
             });
+
+
+
         });
 
         // Sidebar/Topbar toggle logic (no changes to existing JS logic)
