--- a/templates/dashboards/sales/my_orders.html
+++ b/templates/dashboards/sales/my_orders.html
@@ -1163,7 +1163,7 @@
                                 class="bi bi-speedometer2 me-2"></i>Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="/sales/sell"><i class="bi bi-graph-up me-2"></i>Sell</a>
+                        <a class="nav-link " href="/sales/sell"><i class="bi bi-graph-up me-2"></i>Selling</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/sales/ready-to-go-orders"><i
