--- a/templates/dashboards/transport/transport.html
+++ b/templates/dashboards/transport/transport.html
@@ -480,7 +480,7 @@
                 description: "Orders saved as drafts, awaiting dispatch."
             },
             total_my_draft_transport_order: {
-                title: "My Drafts Orders",
+                title: "My Pending Orders",
                 icon: "truck", // Transport in progress
                 color: "bg-emerald-600",
                 shadow: "shadow-emerald-600/60",
@@ -564,7 +564,7 @@
                 <div class="dashboard-card bg-white p-6 rounded-2xl border border-gray-100 flex flex-col justify-between"
                 onclick="
                 window.location.href = ''
-                ${config.title === 'Drafts Orders' ? "+ '/transport/ready-to-go-for-transport'" : config.title === 'My Drafts Orders' ? "+ '/transport/my-transport-orders'"  : ''}"
+                ${config.title === 'Drafts Orders' ? "+ '/transport/ready-to-go-for-transport'" : config.title === 'My Pending Orders' ? "+ '/transport/my-transport-orders'"  : ''}"
                 >
                     
                     <!-- Title now takes the full top row -->
